--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+# 学习一个server
+下载：http://sourceforge.net/projects/tinyhttpd/
+
   This software is copyright 1999 by J. David Blackstone.  Permission
 is granted to redistribute and modify this software under the terms of
 the GNU General Public License, available at http://www.gnu.org/ .
